@@ -1,3 +1,7 @@
+2010-09-29	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* src/compare_db.c:
+	  - rewrote summarize_changes feature to work with node->changed_attrs
+
 2010-09-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/gen_list.c:
 	  - added bytecmp, has_str_changed, has_md_changed, compare_single_acl,
